Fixes wrong QGraphicsItemCache::boundingRect.

The boundingRect were in some cases not updated correctly, causing
full item exposure. Another problem was that we used QRectF::toRect()
instead of QRectF::toAlignedRect() when converting a QRectF to QRect.

This commit also reduces the probability of doing pixmap scaling since
we only pass an offset to QPainter::drawPixmap, instead of passing
target and source rects.

Task-number: Required by QTBUG-8378